--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,37 +1,40 @@
-.hidden {
-    display: none;
+@import "/css/clock.css";
+@import "/css/contents.css";
+
+*{
+    box-sizing: border-box;   
+}
+
+body{
+    margin: 0;
+}
+
+body img{
+    position: sticky;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
 }
 
 #quote span {
     display: block;
 }
 
-
-*{
-    box-sizing: border-box;   
+.part2 form input {
+    width: 300px;
+    height: 50px;
+    text-align: center;
+    color : rgb(2, 65, 51);
+    font-weight: 800;
+    font-size: 15px;
+    border: 5px solid rgb(0, 255, 200);
+    border-radius: 20px;
+    box-shadow: 1px 2px 3x rgb(5, 168, 106);
+    outline: none;
 }
-html{
-    width: 100%;
-}
-body{
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    
-    color: white;
-
-    position: relative;
-}
-body div{
-    position: absolute;
-}
-body img{
-    width: 100%;
-    height: 100%;
-}
-
-#clock{
-    font-size: 60px;
+#greeting {
+    color: rgb(0, 255, 200);
+    font-style: italic;
+    font-size: 50px;
+    text-shadow: 2px 2px 2px rgb(5, 168, 106);
 }
