--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,9 +9,13 @@ body{
     margin: 0;
 }
 
-body img{
-    position: sticky;
+.img{
+    position: absolute;
     top: 0;
+    z-index: -1;
+}
+
+img{
     width: 100vw;
     height: 100vh;
 }
@@ -29,7 +33,7 @@ body img{
     font-size: 15px;
     border: 5px solid rgb(0, 255, 200);
     border-radius: 20px;
-    box-shadow: 1px 2px 3x rgb(5, 168, 106);
+    box-shadow: 1px 2px 3px rgb(5, 168, 106);
     outline: none;
 }
 #greeting {
@@ -38,3 +42,4 @@ body img{
     font-size: 50px;
     text-shadow: 2px 2px 2px rgb(5, 168, 106);
 }
+
